<resources>
    <string name="app_name">MisTareas</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="imagen_de_fondo">imagen de fondo</string>
    <string name="itt">ITT</string>
    <string name="usuario">Usuario</string>
    <string name="pass">contraseña</string>
    <string name="login">LOGIN</string>
    <string name="crear_cuenta_nueva">Crear cuenta nueva</string>
    <string name="tarea_realizada">Hecho</string>
</resources>