<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/fondo_log" />

    <TextView
        android:id="@+id/titulo"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/mis_tareas"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/subtitulo"
        style="@style/etiquetas"
        android:layout_below="@id/titulo"
        android:layout_marginTop="10dp"
        android:text="@string/itt"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/cajasTexto"
        android:orientation="vertical"
        android:layout_below="@id/subtitulo"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="10dp">


        <android.support.design.widget.TextInputLayout
            style="@style/cajasTexto">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cajaUser"
                style="@style/cajasTexto"
                android:hint="@string/usuario"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textSize="17sp">

                <requestFocus />

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/cajasTexto">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cajaPass"
                style="@style/cajasTexto"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Button
        android:id="@+id/botonLogin"
        style="@style/cajasTexto"
        android:layout_below="@id/linearLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/boton"
        android:text="@string/login"
        android:textSize="20sp"
        android:onClick="login"

        />
    <TextView
        android:id="@+id/cuentaNueva"
        style="@style/etiquetas"
        android:layout_below="@id/botonLogin"
        android:layout_marginTop="16dp"
        android:text="@string/crear_cuenta_nueva"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="crearCuenta"/>


</RelativeLayout>